# codingdojo

./: .gitignore  README.md
FizzBuzz/FSharp/FSharpFizzBuzz/FizzBuzz/: FizzBuzz.fs  FizzBuzz.fsproj
FizzBuzz/FSharp/FSharpFizzBuzz/UnitTestFSharp/: FizzBuzzTest.fs  UnitTestFSharp.fsproj
FizzBuzz/JavaScript/20190926-FizzBuzz-ECMAScript6/: Readme.md
csharp/fizzbuzz/: FizzBuzzEngine.sln
csharp/fizzbuzz/FizzBuzzEngine/: BangRule.cs  BaseRule.cs  BuzzRule.cs  Engine.cs  FizzBuzzEngine.csproj  FizzRule.cs  FortyTwoRule.cs  IIsFinal.cs  IRule.cs  SixtyNineRule.cs
csharp/fizzbuzz/FizzBuzzEngineTests/: FizzBuzzEngineTests.csproj  FizzBuzzTests.cs
haskell/aoc-2020/: README.md  default.nix  okiwi-aoc.cabal  shell.nix
haskell/aoc-2020/src/: AOC.hs
haskell/aoc-2020/test/: AOCSpec.hs
java/: pom.xml
java/4l_de_Jacky/: pom.xml
java/advent_of_code1/: pom.xml
java/fizzbuzz-openclose/: .gitignore  README.md  pom.xml
java/harry_est_décédé/: README.md  build.gradle  settings.gradle
javascript/DevineLeGoogle/: README  devine-le-google.js  index.html  test.html  test.js  testEntrees.js  testHorloge.js  testPresentation.js  testTemps.js
javascript/DevineLeGoogle/lib/: jquery.timers.js
python/AdventOfCode1/: test_3-mars.py
python/NombreRomain/: NombreLatin.py  test_add.py
python/fizzbuzz/: README.md  main.py  tests.py
python/pacman/: packman.py  test.py
python/romanNumber/: .gitignore  README.md  roman.py
react/IdleGame/: TODO.md  package.json
react/IdleGame/src/: App.js
src/main/java/: EndStream.java  Soundex.java  Util.java
(+38 files in other folders)
