name: okiwi-aoc
version: 1.0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple

library
    hs-source-dirs:      src
    build-depends: base < 5
    exposed-modules: AOC
    default-language: Haskell2010
    ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Werror

test-suite aoc-test
  hs-source-dirs:       test
  main-is:              test.hs
  type:                 exitcode-stdio-1.0
  other-modules: AOCSpec
  build-depends:
                        base < 5
                      , okiwi-aoc
                      , QuickCheck
                      , hspec
                        , hspec-core
  build-tool-depends:
                      hspec-discover:hspec-discover

  default-language:     Haskell2010
  ghc-options:          -Wall
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wredundant-constraints
                        -Wpartial-fields
                        -Werror
                        -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
